[UTF-8][Japanese]

*Ver3.14 : 2017/-/-

-テザインモジュール一覧のページをアップデート。
-【plugin】ARTICLE_FIRST_VISIBLE_PINGイベントの追加。
-【plugin】WebPushの既知サーバに Edge のPushサーバを追加。
-【fix/plugin】WebPushの「新着記事で送信しない」設定が動作していない。
-【fix/markdown】タグ中のシンタックスが処理されてしまう。（[https://github.com/nabe-abk/adiary/issues/5:Thanks to pawa]）

*Ver3.13 : 2017/08/22

-テーマ選択時、色可変テーマの持つ色式をロード時に判定するように変更（デバッグ目的）
-[https://adiary.org/v3man/Satsuki-tag/url-filter:filter記法]でSpeaker Deckに対応しました((しかしDebianサーバ等では、[https://www.bggofurther.com/2016/06/opensslpyopenssl-ssl23_get_server_hellotlsv1-alert-internal-error/:OpenSSLのバグ]によりエラーになります……。))
-【plugin】WebPushで、未知のサーバ（ブラウザ）でも登録可能な設定を追加。
-【plugin】WebPush通知登録済みでも、30日経過後は再度登録処理をするようにしました。((こうしておかないと何らかの要因でサーバ側のWebPush登録情報が破棄された場合、2度とブラウザ側から登録処理ができなくなってしまいます。))
-【fix/plugin】WebPushプラグインで、初回の登録処理が内部的に2度行われる。
-【fix/plugin】Twitter通知プラグイン「"'<>」などの文字が文字化けしてしまう。
-【fix】ローカルサーバと高速なブラウザにおいてデザイン編集がうまく機能しない。
-【fix】数字のみのタグ名をタグ一覧から編集できない。
-【fix】タグ名編集時、同名のタグがあってもエラーにならない。（Thanks to Kaede）
-【fix/テーマ】hatena2テーマとnature-forestテーマで個別の色を変更するとエラーになる。
-【Ver3.13a】【fix】「その他の設定」メニューの項目が間違っている。
-【Ver3.13a】【fix】WebPushプラグイン関連の細かいバグ。
-【Ver3.13a】ログインフォームのidのフィールド名を修正。((他のWebフォームの「id」と被ってるため、入力候補にいらない文字列がたくさん出るので。))

*Ver3.12 : 2017/05/13

-【fix】【Markdown】何も入力しないで保存するとサーバが応答しなくなる。（Thanks to Kaede）
-【fix】http://adiary.org へのリンクを https://adiary.org に修正。
-【Ver3.12a】【fix】Markdown入力で、引用やリストブロック直後のテーブル記法が認識されない。（Thanks to Kaede）
-【Ver3.12b】【PostgreSQL】DBD::Pgの非互換な修正（Ver3.6.0～）により発生した不具合に対応（[http://adiary.blog.abk.nu/0367:詳細]）

*Ver3.11 : 2017/04/27

-MathJaxのURLが2017/04/30で期限切れとなるので、更新しました。（[http://adiary.blog.abk.nu/0393#c1:Thanks to リップル]）
-【plugin】WebPush登録ボタンを一度押したらオフにするように。
-【fix】麻雀記法で横に倒した牌の位置が下に揃わない。
-【fix】WebPushプラグインの1回の送信先数が3件だった（デバッグコードの削除忘れ）。

*Ver3.10 : 2017/04/20

-主な変更点
--メニューの構成を変更しました。
--【plugin】[g:Google AMP:AMP表示]に対応しました。
--【plugin】サイトマップに対応しました。サイトマップ(XML)を自動で生成できます。
--【plugin】WebPushに対応しました。Android/Chromeでも利用可能。
--【fix/[bf:XSS脆弱性]】[em:マルチブログで第三者へのレンタル時]に、data-url属性が書けてしまうことによるXSS脆弱性を修正しました。