@@ -3,6 +3,7 @@
 *Ver3.14 : 2017/-/-
 
 -テザインモジュール一覧のページをアップデート。
+-【Markdown】GFMのチェックボックス拡張に対応しました。（Request from Kaede）
 -【plugin】ARTICLE_FIRST_VISIBLE_PINGイベントの追加。
 -【plugin】WebPushの既知サーバに Edge のPushサーバを追加。
 -【fix/plugin】WebPushの「新着記事で送信しない」設定が動作していない。
